<resources>
    <string name="app_name">Manifesto</string>
    <string name="app_slogan">Make events better</string>
    <string name="error">Some error occurred.</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo">Application logo</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="header_title">Header Title</string>
    <string name="header_subtitle">Header Subtitle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feed">Feed</string>
    <string name="profile_image">Profile image</string>
    <string name="post_image">Post image</string>
    <string name="event_image">Event image</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="time_of_event">Time of event</string>
    <string name="active_events">Active events</string>
    <string name="description">Description</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_photo">Select photo</string>
    <string name="add_escape_route">Add escape route</string>
    <string name="create_post">Create</string>
    <string name="title_activity_map">Map</string>
    <string name="choose_event">Choose event</string>
    <string name="event">Event</string>
    <string name="file_provider_authority" translatable="false">com.example.stefan.manifesto.fileprovider</string>
    <string name="selected_photo">Selected image</string>
    <string name="location">Location</string>
    <string name="reset">Reset</string>
    <string name="start_selecting_route">Start selecting route</string>
    <string name="save">Save</string>
    <string name="set_post_location">Set post location</string>
    <string name="time">Time</string>
    <string name="user_image">User image</string>
    <string name="message">Message</string>
    <string name="edit">Edit</string>
    <string name="edit_user_image">Edit user image</string>
    <string name="account">Account</string>
    <string name="application">Application</string>
    <string name="notifications">Notifications</string>
    <string name="gps_tracking">GPS tracking</string>
    <string name="settings">Settings</string>
    <string name="all">All</string>
    <string name="emergency_only">Emergency only</string>
    <string name="emergency_nearby_only">Emergency nearby only</string>
    <string name="none">None</string>
    <string name="person_image">Person image</string>
    <string name="people">People</string>
    <string name="enter_text_message">Enter text message...</string>
</resources>
