<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/nav_bar_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="64dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:clickable="true"
    android:id="@+id/nav_header">

    <ImageView
        android:id="@+id/nav_header_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/nav_header_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nav_header_user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_subtitle"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
