<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.stefan.manifesto.viewmodel.AddPostViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_description"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine"
                    android:text="@{viewModel.post.text}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_description" />

                <Button
                    android:id="@+id/btn_take_picture"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_color_box"
                    android:drawableStart="@drawable/ic_camera"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/take_a_photo"
                    android:textSize="12sp"
                    android:onClick="@{() -> viewModel.onTakePictureButtonClick()}"
                    app:layout_constraintEnd_toStartOf="@+id/btn_select_photos"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_description" />

                <Button
                    android:id="@+id/btn_select_photos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_color_box"
                    android:drawableStart="@drawable/ic_photo_library"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/select_photo"
                    android:textSize="12sp"
                    android:onClick="@{() -> viewModel.onSelectPictureButtonClick()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_take_picture"
                    app:layout_constraintTop_toBottomOf="@id/edit_description" />


                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/fragment_map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    tools:context=".MapActivity"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_take_picture" />

                <Button
                    android:id="@+id/btn_add_escape_route"
                    style="@style/ButtonLightYellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_escape_route"
                    android:onClick="@{() -> viewModel.onAddEscapeRouteButtonClick()}"
                    app:layout_constraintEnd_toStartOf="@+id/btn_create_post"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_map" />

                <Button
                    android:id="@+id/btn_create_post"
                    style="@style/ButtonTertiaryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_post"
                    android:onClick="@{() -> viewModel.onCreatePostButtonClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_add_escape_route"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_map" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</layout>
